build: organizando pasta desafios

--- a/desafios/ex005/index.html
+++ b/desafios/ex005/index.html
@@ -10,14 +10,14 @@
 
 <body>
       <header>
-            <h1>Informe um número</h1>
+            <h1>Analisador de Npumero Real</h1>
       </header>
       <section>
             <form action="cad.php" method="get">
-                  <label for="nome">Número: </label>
+                  <label for="nome">Número Real: </label>
                   <input type="number" name="number" id="idnumber">
 
-                  <input type="submit" value="Calcular">
+                  <input type="submit" value="Analisar">
             </form>
       </section>
 </body>
